@@ -9860,3 +9860,4 @@ audio/ruby-xmms2||2018-01-15|Has expired: Does not build with current versions o
 net/unison-nox11|net/unison@nox11|2018-01-15|Moved to a flavored, generic, version
 audio/hydrogen-devel|audio/hydrogen|2018-01-17|Out of date: use audio/hydrogen for now
 graphics/py-rabbyt||2018-01-19|Has expired: Development ceased, no longer used in the ports
+deskutils/py-spice-gtk|deskutils/spice-gtk|2018-01-20|Old style Python bindings dropped, no difference from the master port
